<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="6">

    <android.support.v4.widget.NestedScrollView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:fillViewport="true"
        android:layout_weight="6">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="6">

            <LinearLayout
                android:id="@+id/linearLayout_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView_cover"
                    android:layout_width="210dp"
                    android:layout_height="300dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    android:contentDescription="@string/cover"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp">


                    <TextView
                        android:id="@+id/textView_title_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/book_detail_view_fragment_book_title"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/textView_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""/>

                    <TextView
                        android:id="@+id/textView_author_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/book_detail_view_fragment_book_author"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/textView_author"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""/>

                    <TextView
                        android:id="@+id/textView_publisher_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/book_detail_view_fragment_book_publisher"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/textView_publisher"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""/>

                    <TextView
                        android:id="@+id/textView_genre_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/book_detail_view_fragment_book_genre"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/textView_genre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout_description"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="6"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textView_description_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/book_detail_view_fragment_book_description"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/textView_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""/>
            </LinearLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/linearLayout_cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="@string/cancel">

            <ImageButton
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@android:color/transparent"
                android:scaleType="fitXY"
                android:src="@drawable/ic_action_delete"
                android:contentDescription="@string/action_delete"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_book_cancel_button"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout_add"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="@string/add_book_ok_button">

            <ImageButton
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@android:color/transparent"
                android:scaleType="fitXY"
                android:src="@drawable/ic_action_accept"
                android:contentDescription="@string/action_accept"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_book_ok_button"/>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>