<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:id="@+id/frameLayout_details"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nestedScrollView_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:clipToPadding="false"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout_info"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView_cover"
                    android:layout_width="210dp"
                    android:layout_height="300dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    android:transitionName="image_transition"
                    android:contentDescription="@string/cover"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp">


                    <TextView
                        android:id="@+id/textView_title_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/book_detail_view_fragment_book_title"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/textView_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""/>

                    <TextView
                        android:id="@+id/textView_author_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/book_detail_view_fragment_book_author"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/textView_author"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""/>

                    <TextView
                        android:id="@+id/textView_publisher_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/book_detail_view_fragment_book_publisher"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/textView_publisher"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""/>

                    <TextView
                        android:id="@+id/textView_genre_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/book_detail_view_fragment_book_genre"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/textView_genre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout_description"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="6"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textView_description_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/book_detail_view_fragment_book_description"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/textView_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""/>
            </LinearLayout>

        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>


    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

</FrameLayout>
