<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout android:id="@+id/coordinatorLayout"
                                                 xmlns:android="http://schemas.android.com/apk/res/android"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 android:fitsSystemWindows="true"
    android:background="@drawable/img_library_background">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:weightSum="5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@color/black_50">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_book_by_isbn_view_isbn_title"
                android:textColor="@color/white"
                android:textStyle="bold"/>

            <EditText
                android:layout_marginStart="10dp"
                android:id="@+id/editText_isbn"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/add_book_by_isbn_view_isbn_hint"
                android:textColorHint="@color/white_65"
                android:textColor="@color/white"
                android:singleLine="true"
                android:maxLength="20"
                android:imeOptions="flagNoExtractUi">
                <requestFocus/>
            </EditText>

            <ImageButton
                android:id="@+id/imageButton_search"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_action_search_white"
                android:background="@android:color/transparent"
                android:contentDescription="@string/search"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/frameLayout_library_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </FrameLayout>

            <TextView
                android:id="@+id/textView_no_results"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/add_book_no_results"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:gravity="center"/>

        </LinearLayout>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>